--- a/parsimatn-example-of-use.tex
+++ b/parsimatn-example-of-use.tex
@@ -24,9 +24,9 @@
 \author{ساده، کارا، آشنا، زیبا}
 
 \date{%
-گونۀ 1.2
+گونۀ 1.2 آ
 \quad - \quad \today \\
-\lr{Version 2.1 \quad - \quad \latintoday}
+\lr{Version 2.1a \quad - \quad \latintoday}
 }
 
 \usepackage{ptext}
